# HACK_UDC_2026

./: .env.example  .gitignore  CONTRIBUTING.md  DashboardFinal.json  Dashboard_v2.json  LICENSE  Makefile  README.md  SETUP_GUIDE.md  app.py  backend.py  pyproject.toml  requirements.txt  test  test2
.github/: PULL_REQUEST_TEMPLATE.md
Backend_Py/: Dockerfile  accidentes_tu_loki.py  backend.py
Docker_grafana/: .env  docker-compose.yml
HACK_UDC_2026/: README.md
HACK_UDC_2026/Backend_Py/: backend.py
data/: README.md
docs/: arquitectura.md  ideas.md
notebooks/: 01_exploracion_datos.ipynb  README.md
src/: README.md  __init__.py  config.py  main.py
src/api/: __init__.py
src/data/: __init__.py  loader.py
src/utils/: __init__.py  helpers.py
tests/: README.md  conftest.py  test_config.py  test_helpers.py  test_loader.py
